--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "vue-router": "^4.1.5",
     "vue-slider-component": "^4.1.0-beta.7",
     "vue3-dropzone": "^2.0.1",
-    "vuedraggable": "^4.1.0"
+    "vuedraggable": "^4.1.0",
+    "wavesurfer.js": "^6.4.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
