--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "neat-csv": "^7.0.0",
-    "qs": "^6.11.0"
+    "qs": "^6.11.0",
+    "youtube-search": "^1.1.6",
+    "ytdl-core": "^4.11.2"
   }
 }
