--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,18 @@
   },
   "dependencies": {
     "@auth0/auth0-vue": "^2.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "@vueuse/core": "^9.11.1",
     "axios": "^1.2.3",
     "pinia": "^2.0.23",
     "pug": "^3.0.2",
     "sass": "^1.57.1",
     "smart-tagz": "^0.4.1",
+    "uuid": "^9.0.0",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5",
     "vue-slider-component": "^4.1.0-beta.7",
