--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.5-lts.1",
     "neat-csv": "^7.0.0",
     "qs": "^6.11.0",
+    "uuid": "^9.0.1",
     "winston": "^3.8.2",
     "youtube-search": "^1.1.6",
     "ytdl-core": "^4.11.2"
